<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/headerImage"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:scaleType="fitXY"
        android:src="@drawable/header_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="TODO"></ImageView>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="104dp"
        android:layout_height="300dp"
        android:contentDescription="TODO"
        android:src="@drawable/poster_sparkling"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/headerImage"
        app:layout_constraintVertical_bias="0.32"></ImageView>

    <TextView
        android:id="@+id/textGreeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/holiday_Greeting"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.43"></TextView>

    <TextView
        android:id="@+id/textSentFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from_Cristi"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textGreeting"
        app:layout_constraintTop_toTopOf="@+id/headerImage"
        app:layout_constraintVertical_bias="0.47"></TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="⭐"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/headerImage"
        app:layout_constraintVertical_bias="0.43"></TextView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/christmas_Wish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/headerImage"
        app:layout_constraintVertical_bias="0.58"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.12">

        <Button
            android:id="@+id/letItSnowButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:background="@color/pink"
            android:text="@string/let_It_Snow"
            android:textColor="@color/white"></Button>

        <Button
            android:id="@+id/ginglesBellsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:background="@color/pink"
            android:text="@string/gingles_Bells"
            android:textColor="@color/white"></Button>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>